--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
 git+https://github.com/huggingface/transformers
 git+https://github.com/huggingface/accelerate
 git+https://github.com/huggingface/peft
-git+https://github.com/huggingface/trl
+git+https://github.com/huggingface/trl@0.5.0
 git+https://github.com/huggingface/datatrove.git
 unsloth[conda]@git+https://github.com/unslothai/unsloth.git
 deepspeed
-PyGithub
-flash-attn
-huggingface-hub
-evaluate
-datasets
-bitsandbytes
-einops
-wandb
+PyGithub==2.3.0
+huggingface-hub==0.16.4
+evaluate==0.4.0
+datasets==2.14.4
+bitsandbytes==0.41.1
+einops==0.6.1
+wandb==0.15.8
 tensorboard
-tiktoken
+tiktoken==0.4.0
 pandas
 numpy
 scipy
