--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 git+https://github.com/huggingface/transformers
 git+https://github.com/huggingface/accelerate
 git+https://github.com/huggingface/peft
-git+https://github.com/huggingface/trl@0.5.0
+git+https://github.com/huggingface/trl
 git+https://github.com/huggingface/datatrove.git
 unsloth[conda]@git+https://github.com/unslothai/unsloth.git
 deepspeed
